--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
 }
@@ -35,4 +35,310 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  max-width: 1140px;
+  min-height: 534px;
+  margin-top: 133px;
+  margin-left: 30px;
+}
+
+.result {
+  width: 711px;
+  max-height: 456px;
+}
+
+.result__video-container {
+  position: relative;
+  width: 711px;
+  height: 386px;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  min-width: 711px;
+  min-height: 54px;
+  margin-top: 12px;
+}
+
+.search-form__fieldset {
+  min-width: 212px;
+  min-height: 49px;
+  border: 0;
+}
+
+.search-form__city {
+  min-width: 225px;
+  min-height: 54px;
+}
+
+.search-form__time {
+  margin-bottom: 5px;
+}
+
+.search-form__fieldset-title {
+  margin-bottom: 5px;
+  min-width: 51.4px;
+  min-height: 18px;
+  font-weight: 400;
+  font-size: 18px;
+  margin-top: 3px;
+  line-height: 21.6px;
+  color: #fff;
+}
+
+.search-form__label-text {
+  font-family: "Fira Sans Condensed";
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.6px;
+}
+
+.search-form__textfield {
+  min-width: 211px;
+  font-family: "Fira Sans Condensed";
+  height: 27px;
+  width: 100%;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.6px;
+  opacity: 0.7;
+  outline: none;
+  appearance: none;
+  background: transparent !important;
+  border-width: 1px 0px 1px 0px;
+  border-style: solid;
+  border-color: #ffffff;
+  border-bottom: 2px solid #fff;
+  border-top: 2px solid #fff;
+  background-color: transparent;
+  outline: 0;
+  cursor: text;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+  flex-direction: row;
+}
+
+.search-form__pseudo-checkbox {
+  display: inline-block;
+  position: relative;
+  top: 1.5px;
+  width: 19px;
+  height: 19px;
+  outline: 1px solid #fff;
+  cursor: pointer;
+}
+
+.button {
+  background-color: transparent;
+  border: 1px solid #fff;
+  font-size: 18px;
+  height: 34px;
+  line-height: 21.6px;
+  align-items: center;
+  cursor: pointer;
+  font-family: "Fira Sans Condensed";
+  font-weight: 700;
+  color: #fff;
+}
+
+.more-button {
+  width: 399px;
+}
+
+.search-form__submit-button {
+  display: inline-block;
+  width: 194px;
+}
+
+.content__details {
+  position: relative;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+  max-width: 399px;
+  max-height: 534px;
+  overflow: auto;
+  flex-grow: 1;
+}
+
+.title {
+  max-width: 260px;
+  max-height: 210px;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 70.5px;
+  font-family: "Oswald";
+  text-transform: uppercase;
+  color: #fff;
+  margin-bottom: 20px;
+  margin-top: 4px;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.result__video-container {
+  position: relative;
+  max-width: 711px;
+  max-height: 386px;
+  block-size: fixed;
+  margin-top: 78px;
+}
+
+.content_list {
+  position: relative;
+  max-width: 399px;
+  max-height: 298px;
+}
+
+.content__list-item {
+  display: flex;
+  margin-bottom: 24px;
+  max-width: 394px;
+  min-height: 107px;
+}
+
+.content__card-link {
+  font-size: 0;
+  display: block;
+  margin: 3px;
+}
+
+.content__video-card {
+  display: flex;
+  min-width: 394px;
+  min-height: 107px;
+  flex-direction: row;
+}
+
+.content__video-card-thumbnail {
+  display: block;
+  margin-top: 2px;
+  width: 194px;
+  height: 103px;
+}
+
+.content__video-card-description-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 200px;
+  max-height: 101px;
+}
+
+.content__video-card-title {
+  max-width: 200px;
+  line-height: 30px;
+  font-family: "Oswald";
+  font-weight: 700;
+  font-size: 30px;
+  color: #fff;
+  margin-top: 3px;
+  margin-bottom: 6px;
+  text-transform: uppercase;
+}
+
+.content__video-card-description:before {
+  content: "Вот, что видит кто-то из команды Практикума, когда не смотрит на код, а смотрит в окно.";
+  max-width: 200px;
+  max-height: 65px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 16.2px;
+  color: #fff;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+  appearance: none;
+}
+
+input {
+  color: #fff;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__label:active .search-form__textfield:active {
+  border: none;
+  outline: none;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+[type="checkbox"]:checked + span::before {
+  content: "";
+  position: relative;
+  display: block;
+  top: 1px;
+  left: 1px;
+  width: 17px;
+  height: 17px;
+  border: 1px;
+  background-color: #fff;
+}
+
+.search-form__label:hover {
+  text-decoration: underline;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.content__list-item:hover {
+  text-decoration: underline;
+}
+
+.content__list-item:focus {
+  border: 1px bold #fff;
+}
+
+.content__card-link_current {
+  background-color: #545050;
 }
