--- a/styles/style.css
+++ b/styles/style.css
@@ -9,9 +9,12 @@ html {
 }
 
 .page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
-  margin: auto;
+  margin: 31px auto 0;
   color: #fff;
   font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
@@ -30,6 +33,7 @@ blockquote,
 fieldset {
   margin: 0;
   padding: 0;
+  border: none;
 }
 
 ul,
@@ -42,23 +46,21 @@ a {
 }
 
 .content {
+  inline-size: 1140px;
   display: flex;
-  flex-direction: row;
-  max-width: 1140px;
-  min-height: 534px;
-  margin-top: 133px;
-  margin-left: 30px;
+  align-items: flex-end;
+  gap: 30px;
 }
 
 .result {
   width: 711px;
-  max-height: 456px;
 }
 
 .result__video-container {
   position: relative;
   width: 711px;
   height: 386px;
+  block-size: fixed;
 }
 
 .result__video {
@@ -74,90 +76,75 @@ a {
   justify-content: space-between;
   align-items: flex-end;
   min-width: 711px;
-  min-height: 54px;
-  margin-top: 12px;
+  margin-top: 16px;
 }
 
 .search-form__fieldset {
-  min-width: 212px;
-  min-height: 49px;
+  max-width: 212px;
   border: 0;
 }
 
-.search-form__city {
-  min-width: 225px;
-  min-height: 54px;
-}
-
-.search-form__time {
-  margin-bottom: 5px;
+.search-form__label {
+  display: flex;
+  width: fit-content;
 }
 
 .search-form__fieldset-title {
+  font-weight: 400;
+  font-size: 18px;
   margin-bottom: 5px;
-  min-width: 51.4px;
-  min-height: 18px;
-  font-weight: 400;
-  font-size: 18px;
-  margin-top: 3px;
-  line-height: 21.6px;
-  color: #fff;
-}
-
-.search-form__label-text {
-  font-family: "Fira Sans Condensed";
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21.6px;
 }
 
 .search-form__textfield {
-  min-width: 211px;
-  font-family: "Fira Sans Condensed";
+  font-family: inherit;
+  min-width: 225px;
   height: 27px;
   width: 100%;
   font-weight: 400;
   font-size: 18px;
-  line-height: 21.6px;
-  opacity: 0.7;
-  outline: none;
+  margin-top: 5px;
   appearance: none;
-  background: transparent !important;
-  border-width: 1px 0px 1px 0px;
-  border-style: solid;
-  border-color: #ffffff;
-  border-bottom: 2px solid #fff;
-  border-top: 2px solid #fff;
-  background-color: transparent;
-  outline: 0;
+  border-style: none;
+  border-bottom: 1px solid #fff;
+  border-top: 1px solid #fff;
+  background-color: inherit;
   cursor: text;
 }
 
 .search-form__checkbox-list {
+  margin-top: 5px;
+  margin-bottom: 5px;
   display: flex;
-  gap: 15px;
   flex-direction: row;
+  justify-content: space-between;
+  min-width: 212px;
 }
 
 .search-form__pseudo-checkbox {
-  display: inline-block;
-  position: relative;
-  top: 1.5px;
+  display: flex;
+  float: left;
   width: 19px;
   height: 19px;
   outline: 1px solid #fff;
   cursor: pointer;
 }
 
+.search-form__label-text {
+  margin-left: 5px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.6px;
+}
+
 .button {
   background-color: transparent;
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
+  font-family: inherit;
   font-size: 18px;
   height: 34px;
   line-height: 21.6px;
   align-items: center;
   cursor: pointer;
-  font-family: "Fira Sans Condensed";
   font-weight: 700;
   color: #fff;
 }
@@ -167,61 +154,52 @@ a {
 }
 
 .search-form__submit-button {
-  display: inline-block;
+  display: block;
   width: 194px;
 }
 
 .content__details {
-  position: relative;
-  margin-left: 30px;
   display: flex;
   flex-direction: column;
-  max-width: 399px;
-  max-height: 534px;
-  overflow: auto;
-  flex-grow: 1;
 }
 
 .title {
-  max-width: 260px;
-  max-height: 210px;
   font-weight: 700;
   font-size: 75px;
   line-height: 70.5px;
-  font-family: "Oswald";
+  margin-bottom: 24px;
+  font-family: "Oswald", sans-serif;
   text-transform: uppercase;
-  color: #fff;
-  margin-bottom: 20px;
-  margin-top: 4px;
 }
 
 .content__accent {
   color: #545050;
 }
 
-.result__video-container {
+.content__list {
+  display: flex;
+  flex-direction: column;
   position: relative;
-  max-width: 711px;
-  max-height: 386px;
-  block-size: fixed;
-  margin-top: 78px;
-}
-
-.content_list {
-  position: relative;
-  max-width: 399px;
-  max-height: 298px;
+  justify-content: flex-start;
+  min-width: 399px;
+  height: 298px;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .content__list-item {
+  margin-top: -6px;
   display: flex;
-  margin-bottom: 24px;
   max-width: 394px;
-  min-height: 107px;
+}
+
+.content__list-item:not(:last-of-type) {
+  margin-bottom: 30px;
 }
 
 .content__card-link {
-  font-size: 0;
+  color: inherit;
+  text-decoration: none;
   display: block;
   margin: 3px;
 }
@@ -229,13 +207,14 @@ a {
 .content__video-card {
   display: flex;
   min-width: 394px;
-  min-height: 107px;
+  justify-content: space-between;
   flex-direction: row;
 }
 
 .content__video-card-thumbnail {
   display: block;
-  margin-top: 2px;
+  object-fit: cover;
+  margin: 2px 0;
   width: 194px;
   height: 103px;
 }
@@ -244,29 +223,28 @@ a {
   display: flex;
   flex-direction: column;
   max-width: 200px;
-  max-height: 101px;
 }
 
 .content__video-card-title {
   max-width: 200px;
   line-height: 30px;
-  font-family: "Oswald";
+  font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 30px;
   color: #fff;
-  margin-top: 3px;
+  margin-top: 5px;
   margin-bottom: 6px;
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
-.content__video-card-description:before {
-  content: "Вот, что видит кто-то из команды Практикума, когда не смотрит на код, а смотрит в окно.";
+.content__video-card-description {
   max-width: 200px;
-  max-height: 65px;
   font-weight: 400;
   font-size: 18px;
   line-height: 16.2px;
-  color: #fff;
 }
 
 .visually-hidden {
@@ -310,7 +288,7 @@ input {
   background-color: #fff;
 }
 
-.search-form__label:hover {
+.search-form__label:hover .search-form__label-text {
   text-decoration: underline;
 }
 
@@ -331,12 +309,21 @@ input {
   outline-offset: 1px;
 }
 
-.content__list-item:hover {
+.content__card-link:hover {
   text-decoration: underline;
 }
 
-.content__list-item:focus {
-  border: 1px bold #fff;
+.content__card-link:focus {
+  outline: none;
+  border: 1px solid #fff;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.content__card-link:active {
+  background-color: #545050;
 }
 
 .content__card-link_current {
